detect win functionality

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -85,3 +85,15 @@ h1 {
     width: 10vw;
 }
 
+.modalBackground {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
